# PostgresPlaysPokemon

./: .gitignore  .gitmodules  LICENSE  README.md
client/: Cargo.toml  build.rs
client/extension/: Cargo.toml  Makefile  pokemon--0.1.0.sql  pokemon.control  test.sql
client/extension/src/: lib.rs
client/src/: lib.rs  main.rs
proto/: server.proto
server/: Makefile  main.py  requirements.txt  setup.py  testsdl.py
server/paas/: __init__.py  __init__.pyo  server.py  servicer.py
