[package]
name = "ppp-client"
version = "0.1.0"
authors = ["stillinbeta <web@stillinbeta.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "ppp_client"
# crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"

[dependencies.clap]
version = "~2.27.0"
default-features = false

[build-dependencies]
protoc-rust-grpc = "0.6.1"