[package]
name = "pg-extension"
version = "0.1.0"
authors = ["stillinbeta <web@stillinbeta.com>"]
edition = "2018"

[dependencies]
ppp-client = { path = "../" }
# pg-extend = { git = "https://github.com/bluejekyll/pg-extend-rs", rev = "405ab4ca64b307a32f87f1f5b4f0922660cb48dd" }
pg-extend = { git = "https://github.com/bluejekyll/pg-extend-rs", rev = "23f0cfd718477dfeb2de1c5595c5a0e7084b41ad" }
pg-extern-attr = { git = "https://github.com/bluejekyll/pg-extend-rs", rev = "23f0cfd718477dfeb2de1c5595c5a0e7084b41ad" }

[lib]
crate-type = ["cdylib"]