[package]
name = "pg-extension"
version = "0.1.0"
authors = ["stillinbeta <web@stillinbeta.com>"]
edition = "2018"

[dependencies]
grpc            = "~0.6"
ppp-client = { path = "../" }
pg-extend = { git = "https://github.com/bluejekyll/pg-extend-rs", rev = "5850649fffc64e15798750bf1fd82eacb0615763" }
pg-extern-attr = { git = "https://github.com/bluejekyll/pg-extend-rs", rev = "5850649fffc64e15798750bf1fd82eacb0615763" }

[lib]
crate-type = ["cdylib"]