[package]
name = "pokemon-fdw"
version = "0.1.0"
authors = ["stillinbeta <web@stillinbeta.com>"]
edition = "2018"

[dependencies]
grpc            = "~0.6"
ppp-client = { path = "../" }
pg-extend = { git = "https://github.com/bluejekyll/pg-extend-rs", rev = "98762581b1372ed6e641d32fddcff3d983bc3124" }
pg-extern-attr = { git = "https://github.com/bluejekyll/pg-extend-rs", rev = "98762581b1372ed6e641d32fddcff3d983bc3124" }

[lib]
crate-type = ["cdylib"]